--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-biometrics": "^3.0.1",
     "react-native-ble-plx": "^3.2.1",
     "styled-components": "^6.1.13"
   },
